--- a/app/src/main/res/layout/activity_action_bar_tab.xml
+++ b/app/src/main/res/layout/activity_action_bar_tab.xml
@@ -9,12 +9,11 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="scrollable" />
+        style="@style/MyCustomTabLayout"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white" />
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
