--- a/app/src/main/res/layout/activity_action_bar_tab.xml
+++ b/app/src/main/res/layout/activity_action_bar_tab.xml
@@ -14,6 +14,6 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/white" />
 
 </LinearLayout>
