--- a/app/src/main/res/layout/fragment_school_overview.xml
+++ b/app/src/main/res/layout/fragment_school_overview.xml
@@ -4,12 +4,34 @@
     android:layout_height="match_parent"
     tools:context="com.example.idreams.practice.ActionBarTab.SchoolOverviewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/text_school_overview_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical" >
+
+            <fragment
+                android:id="@+id/intofragment"
+                class="com.example.idreams.practice.ActionBarTab.SchoolOverviewIntroFragment"
+                android:layout_width="match_parent"
+                android:layout_height="500px"/>
+            <fragment
+                android:id="@+id/feefragment"
+                class="com.example.idreams.practice.ActionBarTab.SchoolOverviewFeeFragment"
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                />
+            <TextView
+                android:id="@+id/text_school_overview_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="500px"
+                android:text="TEST TEST TEST"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"/>
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
