--- a/app/src/main/res/layout/fragment_school_overview_fee.xml
+++ b/app/src/main/res/layout/fragment_school_overview_fee.xml
@@ -1,15 +1,36 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
     android:orientation="vertical"
     tools:context="com.example.idreams.practice.ActionBarTab.SchoolOverviewFeeFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="學費 ： 10000~20000\n（一年）" />
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="學費 ： 10000~20000\n（一年）" />
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="房價 ： 10000~50000\n（一年）" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="房價 ： 10000~50000\n（一年）" />
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="托福要求 ： 6.0 ~ 6.5" />
+    </LinearLayout>
 
 </FrameLayout>
