Add choose fucking country.

--- a/app/src/main/res/layout/activity_wizard.xml
+++ b/app/src/main/res/layout/activity_wizard.xml
@@ -3,6 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"/>
     <fragment
         android:id="@+id/tutorial_wizard_fragment"
         android:layout_width="match_parent"
