--- a/app/src/main/res/layout/fragment_school_wizard1.xml
+++ b/app/src/main/res/layout/fragment_school_wizard1.xml
@@ -1,55 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <View   android:id="@+id/horizontal_line"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@android:color/darker_gray"
-        android:layout_above="@+id/wizard_button_bar"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:text="Choose the fucking country."
+        android:textColor="#000"
+        android:id="@+id/tv_choose_country"
+        android:textSize="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="30dp" />
 
-    <!-- Layout for wizard controls -->
-    <LinearLayout
-        android:id="@+id/wizard_button_bar"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+    <ListView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        >
-        <Button
-            android:id="@+id/wizard_previous_button"
-            android:text="@string/action_previous"
-            android:enabled="false"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/borderlessButtonStyle"
-            />
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"
-            />
-        <Button
-            android:id="@+id/wizard_next_button"
-            android:text="@string/action_next"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="?android:attr/borderlessButtonStyle"
-            />
-    </LinearLayout>
-
-    <!--
-            **********************************************************************
-            **You MUST have this ViewPager as the container for wizard's steps  **
-            **********************************************************************
-    -->
-    <android.support.v4.view.ViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@id/step_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/horizontal_line"/>
-
+        android:id="@+id/countrylistView"
+        android:layout_alignTop="@+id/tv_choose_country"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="98dp" />
 </RelativeLayout>
