--- a/app/src/main/res/layout/fragment_school_wizard2.xml
+++ b/app/src/main/res/layout/fragment_school_wizard2.xml
@@ -1,14 +1,39 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:text="Wizard1"
+        android:layout_height="fill_parent"
+        android:text="Your English Grades."
         android:textColor="#000"
-        android:layout_marginTop="10dp"
-        android:textSize="20dp"/>
-</LinearLayout>
+        android:id="@+id/tv_choose_country"
+        android:textSize="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="30dp" />
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="94dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:max="120"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TOFEL : 0"
+        android:id="@+id/seekbar_text"
+        android:layout_above="@+id/seekBar"
+        android:layout_centerHorizontal="true" />
+
+
+</RelativeLayout>
